PoC de navegación con mapas

--- a/www/templates/pilares-evento.html
+++ b/www/templates/pilares-evento.html
@@ -29,6 +29,10 @@
           <i class="icon ion-share"></i>
           Ver Web
         </a>
+        <a class="tab-item" ng-click="ruta(evento.latitud.value, evento.longitud.value)">
+          <i class="icon ion-map"></i>
+          Ruta
+        </a>
       </div>
 
     </div>
