Social Sharing en Semana Santa

--- a/www/templates/semsanta-dia.html
+++ b/www/templates/semsanta-dia.html
@@ -18,9 +18,9 @@
             <i class="icon ion-map"></i>
             Abrir mapa
         </a>
-        <a class="tab-item" href="https://twitter.com/intent/tweet?text=Procesiones del {{diasanto}} en @LaAgendica&url={{url}}&hashtags=Zaragoza,SemanaSanta,LaAgendica">
+        <a class="tab-item" ng-click="shareFn('Procesiones del {{diasanto}} en @LaAgendica #Zaragoza #SemanaSanta #LaAgendica', url)">
           <i class="icon ion-share"></i>
-          Twittear
+          Compartir
         </a>
       </div>
 
