Crea MapNavigationService y lo extiende a los controllers de Detalle

--- a/www/templates/evento.html
+++ b/www/templates/evento.html
@@ -30,6 +30,10 @@
           <i class="icon ion-share"></i>
           Ver Web
         </a>
+        <a class="tab-item" ng-click="navigate(evento.latitud.value, evento.longitud.value)">
+          <i class="icon ion-map"></i>
+          Ruta
+        </a>
       </div>
 
     </div>
