--- a/www/templates/pilares-evento.html
+++ b/www/templates/pilares-evento.html
@@ -29,7 +29,7 @@
           <i class="icon ion-share"></i>
           Ver Web
         </a>
-        <a class="tab-item" ng-click="ruta(evento.latitud.value, evento.longitud.value)">
+        <a class="tab-item" ng-click="navigate(evento.latitud.value, evento.longitud.value)">
           <i class="icon ion-map"></i>
           Ruta
         </a>
