--- a/www/templates/destacado.html
+++ b/www/templates/destacado.html
@@ -26,7 +26,7 @@
           <i class="icon ion-share"></i>
           Ver Web
         </a>
-        <a class="tab-item" ng-click="navigate(evento.latitud.value, evento.longitud.value)">
+        <a ng-show="evento.latitud" class="tab-item" ng-click="navigate(evento.latitud.value, evento.longitud.value)">
           <i class="icon ion-map"></i>
           Ruta
         </a>
