Gestión de favoritos en Pilares

--- a/www/templates/destacado.html
+++ b/www/templates/destacado.html
@@ -23,7 +23,7 @@
           Compartir
         </a>
         <a class="tab-item" href='{{evento.uri.value.replace("http://www.zaragoza.es/api/recurso/cultura-ocio/evento-zaragoza/", "http://www.zaragoza.es/ciudad/actividades/ficha_Agenda?codigo=")}}' target="_blank">
-          <i class="icon ion-share"></i>
+          <i class="icon ion-earth"></i>
           Ver Web
         </a>
         <a ng-show="evento.latitud" class="tab-item" ng-click="navigate(evento.latitud.value, evento.longitud.value)">
