--- a/www/templates/evento.html
+++ b/www/templates/evento.html
@@ -27,7 +27,7 @@
           Compartir
         </a>
         <a class="tab-item" href="{{evento.uri}}" target="_blank">
-          <i class="icon ion-share"></i>
+          <i class="icon ion-earth"></i>
           Ver Web
         </a>
         <a ng-show="evento.coordenadas_p_0_coordinate" class="tab-item" ng-click="navigate(evento.coordenadas_p_0_coordinate, evento.coordenadas_p_1_coordinate)">
