--- a/www/templates/pilares-evento.html
+++ b/www/templates/pilares-evento.html
@@ -17,7 +17,7 @@
       </div>
 
       <div class="item tabs tabs-secondary tabs-icon-left">
-        <a class="tab-item" ng-click="gestionarFavorito({{evento}})" >
+        <a class="tab-item" ng-click="gestionarFavorito(evento)" >
           <i class="icon ion-star" ng-class="{energized: evento.fav}"></i>
             Favorito
         </a>
@@ -26,7 +26,7 @@
           Compartir
         </a>
         <a class="tab-item" href='{{evento.uri.value.replace("http://www.zaragoza.es/api/recurso/cultura-ocio/evento-zaragoza/", "http://www.zaragoza.es/ciudad/actividades/ficha_Agenda?codigo=")}}' target="_blank">
-          <i class="icon ion-share"></i>
+          <i class="icon ion-earth"></i>
           Ver Web
         </a>
         <a ng-show="evento.latitud" class="tab-item" ng-click="navigate(evento.latitud.value, evento.longitud.value)">
