--- a/www/templates/evento.html
+++ b/www/templates/evento.html
@@ -26,7 +26,7 @@
           <i class="icon ion-share"></i>
           Compartir
         </a>
-        <a class="tab-item" href="{{evento.uri}}" target="_blank">
+        <a class="tab-item" ng-click="abrir(evento.uri)">
           <i class="icon ion-share"></i>
           Ver Web
         </a>
