Nuevo icono de LaAgendica para la sección de Pilares

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,8 +18,8 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item nav-clear menu-close href="#/app/pilares" class="item item-icon-left royal">
-          <i class="icon ion-social-freebsd-devil"></i>
+        <ion-item nav-clear menu-close href="#/app/pilares" class="item item-icon-left">
+          <i class="icon pilar-icon"></i>
           Pilares 2015
         </ion-item>
         <ion-item nav-clear menu-close href="#/app/destacados" class="item item-icon-left assertive">
