--- a/www/css/style.css
+++ b/www/css/style.css
@@ -50,4 +50,14 @@
     max-width: 80px;
     max-height: 80px;
     width: 100%;
-    height: 100%; }
+    height: 100%;
+}
+.detail-thumb {
+    position: absolute;
+    top: 16px;
+    left: 16px;
+    max-width: 40px;
+    max-height: 40px;
+    width: 100%;
+    height: 100%;
+}
