--- a/www/templates/pilares-evento.html
+++ b/www/templates/pilares-evento.html
@@ -3,7 +3,8 @@
     <div class="list card">
 
       <div class="item item-avatar item-text-wrap item-icon-left assertive">
-        <i class="icon ion-arrow-graph-up-right"></i>
+        <img ng-show="evento.image" src="{{evento.image.value}}">
+        <img class="detail-thumb" ng-hide="evento.image" src='https://raw.githubusercontent.com/jrub/LaAgendica/master/resources/favicon-32x32.png'/>
         <h2>{{evento.title.value}}</h2>
         <p>Del {{evento.startDate.value | date:'dd-MMM-yy'}} al {{evento.endDate.value | date:'dd-MMM-yy'}}</p>
       </div>
