Añade sección de eventos de HOY
- reutiliza PilaresEventoCtrl y su template para pintar el detalle

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,6 +18,10 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
+        <ion-item nav-clear menu-close href="#/app/hoy" class="item item-icon-left">
+          <i class="icon ion-ios-bookmarks"></i>
+          Qué hacer Hoy
+        </ion-item>
         <ion-item nav-clear menu-close href="#/app/pilares" class="item item-icon-left">
           <i class="icon pilar-icon"></i>
           Pilares 2015
