--- a/www/templates/pilares-evento.html
+++ b/www/templates/pilares-evento.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Evento Pilares">
+<ion-view view-title="{{evento.title.value}}">
   <ion-content>
     <div class="list card">
 
