--- a/www/css/style.css
+++ b/www/css/style.css
@@ -51,3 +51,15 @@
     max-height: 80px;
     width: 100%;
     height: 100%; }
+
+.list-no-separator {
+  border-top: 0px;
+  border-left: 0px;
+  border-right: 0px;
+  border-bottom: 0px;
+}
+
+.card-no-margin {
+    margin: 0px 0px;
+    text-align: center;
+}
