--- a/www/css/style.css
+++ b/www/css/style.css
@@ -52,6 +52,17 @@
     width: 100%;
     height: 100%; }
 
+.list-no-separator {
+  border-top: 0px;
+  border-left: 0px;
+  border-right: 0px;
+  border-bottom: 0px;
+}
+
+.list-no-separator .item-content {
+ padding: 16px 16px 16px 16px;
+}
+
 .card-no-margin {
     margin: 0px 0px;
     text-align: center;
