Actualiza About y Team

--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -2,15 +2,18 @@
   <ion-content>
         <div class="list card">
             <div class="item item-body">
-                <img class="evimage" src="http://www.z4s.es/wp-content/uploads/2015/03/slidehackathon.jpg"> 
+                <img class="evimage" src="https://raw.githubusercontent.com/jrub/LaAgendica/master/resources/icon.png"> 
                 <pre class="evpre nobottom">
-App desarrollada durante el hackaton <a href="http://www.z4s.es/">ZgzAppStore</a> (21-22 de marzo, en el edificio Etopia, Zaragoza).
+App inicialmente desarrollada durante el hackaton ZgzAppStore (21-22 de marzo 2015, en el edificio Etopia, Zaragoza).
 
-Muestra los eventos de la ciudad <b>de la próxima semana</b>, utilizando los servicios Open Data del Ayuntamiento de Zaragoza (+ info en: <a href="http://datosabiertos.zaragoza.es">datosabiertos.zaragoza.es</a>)
+Podrás ver los eventos de hoy ordenados por hora, o buscar eventos para la próxima semana en las diferentes categorías (exposiciones, música, infantil...). Consulta sus detalles incluyendo horario y precio, incluso podrás ver la ruta para llegar al lugar... ¡y no te olvides compartirlo en tus redes sociales! Ah, y si algún evento te llama la atención, guárdalo en favoritos.
 
-La exactitud de los datos depende del Ayuntamiento, para consultas relativas a ellos contacte con <a href="mailto:webmunicipal@zaragoza.es">webmunicipal@zaragoza.es</a> o bien el teléfono 010.
-Para cualquier otra consulta o propuesta sobre la aplicación, puede escribir a <a href="mailto:info@laagendica.com">info@laAgendica.com</a>
-Para reporte de errores concretos es preferible <a href="https://github.com/jrub/LaAgendica/issues">abrir un "issue"</a> en Github si nadie ha especificado ya ese problema.
+LaAgendica es un proyecto sin ánimo de lucro y de código abierto, que puedes consultar en <a href="https://github.com/jrub/LaAgendica">Github</a>. LaAgendica utiliza las fuentes de datos abiertos proporcionadas por el Ayuntamiento de Zaragoza, para más información consultar: <a href="http://datosabiertos.zaragoza.es">datosabiertos.zaragoza.es</a>
+
+LaAgendica está disponible como App para Android y iPhone, pero puedes usarla como WebApp desde el navegador en cualquier plataforma, así que... ¡pásales la web a tus amigos!: <a href="www.laAgendica.com">www.LaAgendica.com</a>
+
+
+La exactitud de los datos depende del Ayuntamiento, para consultas relativas a ellos contacte con <a href="mailto:webmunicipal@zaragoza.es">webmunicipal@zaragoza.es</a> o bien el teléfono 010. Para cualquier otra consulta o propuesta sobre la aplicación, puede escribir a <a href="mailto:info@laagendica.com">info@laAgendica.com</a>.
 
 La App es Open Source, y la mantenemos en nuestro tiempo libre ¿Nos ayudas a difundirla?
                 </pre>
