--- a/www/templates/team.html
+++ b/www/templates/team.html
@@ -32,5 +32,8 @@
             </div>
       </ion-item>
     </ion-list>
+    <pre class="evpre nobottom" style="padding: 16px;">
+Nuestro agradecimiento a <a href="http://www.conmisojos.com">Fernando Sánchez</a> por el diseño del logo de LaAgendica y la ayuda con la realización del vídeo promocional. ¡Mil gracias Fer!
+    </pre>
   </ion-content>
 </ion-view>
