Arregla links de equipo y acerca de, que se abrían encerrados en el WebView

--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -8,12 +8,12 @@ App inicialmente desarrollada durante el hackaton ZgzAppStore (21-22 de marzo 20
 
 Podrás ver los eventos de hoy ordenados por hora, o buscar eventos para la próxima semana en las diferentes categorías (exposiciones, música, infantil...). Consulta sus detalles incluyendo horario y precio, incluso podrás ver la ruta para llegar al lugar... ¡y no te olvides compartirlo en tus redes sociales! Ah, y si algún evento te llama la atención, guárdalo en favoritos.
 
-LaAgendica es un proyecto sin ánimo de lucro y de código abierto, que puedes consultar en <a href="https://github.com/jrub/LaAgendica">Github</a>. LaAgendica utiliza las fuentes de datos abiertos proporcionadas por el Ayuntamiento de Zaragoza, para más información consultar: <a href="http://datosabiertos.zaragoza.es">datosabiertos.zaragoza.es</a>
+LaAgendica es un proyecto sin ánimo de lucro y de código abierto, que puedes consultar en <a href="https://github.com/jrub/LaAgendica" target="_blank">Github</a>. LaAgendica utiliza las fuentes de datos abiertos proporcionadas por el Ayuntamiento de Zaragoza, para más información consultar: <a href="http://datosabiertos.zaragoza.es" target="_blank">datosabiertos.zaragoza.es</a>
 
-LaAgendica está disponible como App para Android y iPhone, pero puedes usarla como WebApp desde el navegador en cualquier plataforma, así que... ¡pásales la web a tus amigos!: <a href="www.laAgendica.com">www.LaAgendica.com</a>
+LaAgendica está disponible como App para Android y iPhone, pero puedes usarla como WebApp desde el navegador en cualquier plataforma, así que... ¡pásales la web a tus amigos!: <a href="http://www.laAgendica.com" target="_blank">www.LaAgendica.com</a>
 
 
-La exactitud de los datos depende del Ayuntamiento, para consultas relativas a ellos contacte con <a href="mailto:webmunicipal@zaragoza.es">webmunicipal@zaragoza.es</a> o bien el teléfono 010. Para cualquier otra consulta o propuesta sobre la aplicación, puede escribir a <a href="mailto:info@laagendica.com">info@laAgendica.com</a>.
+La exactitud de los datos depende del Ayuntamiento, para consultas relativas a ellos contacte con <a href="mailto:webmunicipal@zaragoza.es" target="_blank">webmunicipal@zaragoza.es</a> o bien el teléfono 010. Para cualquier otra consulta o propuesta sobre la aplicación, puede escribir a <a href="mailto:info@laagendica.com" target="_blank">info@laAgendica.com</a>.
 
 La App es Open Source, y la mantenemos en nuestro tiempo libre ¿Nos ayudas a difundirla?
                 </pre>
