--- a/www/templates/destacados.html
+++ b/www/templates/destacados.html
@@ -2,7 +2,10 @@
   <ion-content>
     <ion-list ng-show="hayEventos">
       <ion-item class="item-thumbnail-left" ng-repeat="evento in eventos" href="#/app/destacado/{{$index}}">
-        <img src="{{evento.image.value}}">
+
+        <img ng-show="evento.image.value !== 'http:'" ng-src="{{evento.image.value}}"/>
+        <img class="list-thumb" ng-show="evento.image.value === 'http:'" src='https://raw.githubusercontent.com/jrub/LaAgendica/master/resources/icon.png'/>
+
         <h2>{{evento.title.value}}</h2>
         <p>Del {{evento.startDate.value | date:'dd-MMM-yy'}} al {{evento.endDate.value | date:'dd-MMM-yy'}}</p>
       </ion-item>
