--- a/www/templates/pilares-evento.html
+++ b/www/templates/pilares-evento.html
@@ -3,14 +3,14 @@
     <div class="list card">
 
       <div class="item item-avatar item-text-wrap item-icon-left assertive">
-        <img ng-show="evento.image" ng-src="{{evento.image.value}}">
+        <img ng-show="evento.image" ng-src="http:{{evento.image.value}}">
         <img class="detail-thumb" ng-hide="evento.image" src='https://raw.githubusercontent.com/jrub/LaAgendica/master/resources/favicon-32x32.png'/>
         <h2>{{evento.title.value}}</h2>
         <p>Del {{evento.startDate.value | date:'dd-MMM-yy'}} al {{evento.endDate.value | date:'dd-MMM-yy'}}</p>
       </div>
 
       <div class="item item-body">
-        <img class="evimage" ng-show="evento.image" src="http:{{evento.image.value}}"/>
+        <img class="evimage" ng-show="evento.image" ng-src="http:{{evento.image.value}}"/>
         <img class="evimage" ng-hide="evento.image" src='https://raw.githubusercontent.com/jrub/LaAgendica/master/resources/icon.png'/>
         <div class="evpre" ng-bind-html="evento.description.value"></div>
         <strong>Horario: </strong><div class="evpre" ng-show="evento.horario.value" ng-bind-html="evento.horario.value"></div>
