--- a/www/css/style.css
+++ b/www/css/style.css
@@ -5,6 +5,9 @@
   margin-left: auto;
   margin-right: auto;
   display: block; }
+.margin-top {
+  margin-top: 20px;
+}
 .evpre {
 	color: #666;
   font-size: 14px;
