--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -3,7 +3,7 @@
         <div class="list card">
             <div class="item item-body">
                 <img class="evimage" src="https://raw.githubusercontent.com/jrub/LaAgendica/master/resources/icon.png">
-                <a ng-show="is_ios" ng-hide="is_app" href="">
+                <a ng-show="is_ios" ng-hide="is_app" ng-click="addToHomeAlert()">
                   <img alt="Download on App Store" class="evimage margin-top"
                        src="img/Download_on_the_App_Store_Badge_ES_135x40.svg" />
                 </a>
