Mejor rendimiento en las listas con collection-repeat en vez de ng-repeat
- From http://ionicframework.com/docs/api/directive/collectionRepeat/ :
"collection-repeat allows an app to show huge lists of items much more performantly than ng-repeat"

--- a/www/templates/destacados.html
+++ b/www/templates/destacados.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Destacados de La Agendica">
   <ion-content>
     <ion-list ng-show="hayEventos">
-      <ion-item class="item-thumbnail-left" ng-repeat="evento in eventos" href="#/app/destacado/{{$index}}">
+      <ion-item class="item-thumbnail-left" collection-repeat="evento in eventos" href="#/app/destacado/{{$index}}">
 
         <img ng-show="evento.image.value !== 'http:'" ng-src="{{evento.image.value}}"/>
         <img class="list-thumb" ng-show="evento.image.value === 'http:'" src='https://raw.githubusercontent.com/jrub/LaAgendica/master/resources/icon.png'/>
