--- a/www/templates/favoritos.html
+++ b/www/templates/favoritos.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Tus Favoritos en La Agendica">
   <ion-content>
     <ion-list ng-show="hayEventos">
-      <ion-item class="item-thumbnail-left" ng-repeat="evento in eventos" href="#/app/evento/{{$index}}">
+      <ion-item class="item-thumbnail-left" collection-repeat="evento in eventos" href="#/app/evento/{{$index}}">
         <img src="{{evento.imagen_s}}">
         <h2>{{evento.title}}</h2>
         <p>Del {{evento.fechaInicio_dt | date:'dd-MMM-yy'}} al {{evento.fechaFinal_dt | date:'dd-MMM-yy'}}</p>
