--- a/www/templates/hoy.html
+++ b/www/templates/hoy.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Eventos de Hoy">
   <ion-content>
     <ion-list>
-      <ion-item class="item-thumbnail-left" ng-repeat="evento in eventos | orderBy : 'startTime.value'" href="#/app/hoy/{{evento.id.value}}">
+      <ion-item class="item-thumbnail-left" collection-repeat="evento in eventos | orderBy : 'startTime.value'" href="#/app/hoy/{{evento.id.value}}">
         <img ng-show="evento.image" src="http:{{evento.image.value}}"/>
         <img class="list-thumb" ng-hide="evento.image" src='https://raw.githubusercontent.com/jrub/LaAgendica/master/resources/icon.png'/>
         <h2>{{evento.title.value}}</h2>
