un poco de color a los iconos de About y Team

--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -31,7 +31,7 @@ La App es Open Source, y la mantenemos en nuestro tiempo libre ¿Nos ayudas a di
             </div>
                 <div class="item tabs tabs-icon-bottom">
                     <a class="tab-item item-text-wrap" href="https://twitter.com/intent/tweet?text=¿Aún no conoces @LaAgendica? ¡Todos los eventos de la ciudad en la palma de tu mano! www.laAgendica.com&hashtags=Zaragoza,LaAgendica" target="_blank">
-                        <i class="icon ion-share"></i>
+                        <i class="icon ion-social-twitter-outline positive"></i>
                       Difunde en Twitter
                     </a>
                     <a class="tab-item item-text-wrap" href="https://github.com/jrub/LaAgendica" target="_blank">
@@ -39,7 +39,7 @@ La App es Open Source, y la mantenemos en nuestro tiempo libre ¿Nos ayudas a di
                       Ver código fuente
                     </a>
                     <a class="tab-item item-text-wrap" href="https://twitter.com/intent/follow?screen_name=LaAgendica&lang=es" target="_blank">
-                        <i class="icon ion-social-twitter"></i>
+                        <i class="icon ion-social-twitter positive"></i>
                       Síguenos en Twitter
                     </a>
               </div>
