--- a/www/templates/team.html
+++ b/www/templates/team.html
@@ -16,7 +16,7 @@
 
               <div class="item tabs tabs-secondary tabs-icon-left">
                 <a class="tab-item" ng-click="abrir('{{miembro.twitter}}')">
-	              <i class="icon ion-social-twitter-outline"></i>
+	              <i class="icon ion-social-twitter-outline positive"></i>
 	              Twitter
                 </a>
                 <a class="tab-item" ng-click="abrir('{{miembro.github}}')">
@@ -24,7 +24,7 @@
                   Github
                 </a>
                 <a class="tab-item" ng-click="abrir('{{miembro.web}}')">
-                  <i class="icon ion-android-globe"></i>
+                  <i class="icon ion-android-globe calm"></i>
                   Web
                 </a>
               </div>
