Lugar y dir en detalle Destacados + ApiSparql service. CSSs

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -18,6 +18,12 @@
   vertical-align: baseline;
   font-family: "Helvetica Neue", "Roboto", sans-serif;
 }
+.liso {
+  margin-bottom: 4px !important;
+}
+.pegado {
+  margin: 0px !important;
+}
 .nobottom{
   margin-bottom: -10px;
 }
