--- a/www/templates/destacado.html
+++ b/www/templates/destacado.html
@@ -5,7 +5,7 @@
       <div class="item item-avatar item-text-wrap item-icon-left assertive">
         <i class="icon ion-arrow-graph-up-right"></i>
         <h2>{{evento.title.value}}</h2>
-        <p>Del {{evento.startDate.value | date:'dd-MMM-yy'}} al {{evento.endDate.value | date:'dd-MMM-yy'}}</p>
+        <h3 class="evpre" ng-show="evento.lugar.value">{{evento.lugar.value}}</h3>
       </div>
 
       <div class="item item-body">
@@ -14,6 +14,18 @@
         <img class="evimage" ng-show="evento.image.value === 'http:'" src='https://raw.githubusercontent.com/jrub/LaAgendica/master/resources/icon.png'/>
 
         <div class="evpre" ng-bind-html="evento.description.value"></div>
+
+        <h3 class="liso">Horario: </h3>
+          <div class="evpre pegado" ng-show="evento.horario.value" ng-bind-html="evento.horario.value"></div>
+          <div class="evpre pegado">Del {{evento.startDate.value | date:'dd-MMM-yy'}} al {{evento.endDate.value | date:'dd-MMM-yy'}}</div>
+          <p ng-hide="evento.horario.value">Información no disponible</p>
+        <h3 class="liso">Precio: </h3>
+          <div class="evpre pegado" ng-show="evento.precio.value" ng-bind-html="evento.precio.value"></div>
+          <div class="evpre pegado" ng-hide="evento.precio.value">Información no disponible</div>
+        <h3 class="liso">Dirección: </h3>
+          <div class="evpre pegado" ng-show="evento.lugar.value">{{evento.lugar.value}} <br> {{evento.direccion.value}}</div>
+          <div class="evpre pegado" ng-show="evento.direccion.value"></div>
+          <p ng-hide="evento.lugar.value">Información no disponible</p>
       </div>
 
       <div class="item tabs tabs-secondary tabs-icon-left">
