teléfono en Destacados y Pilares, si existe

--- a/www/templates/destacado.html
+++ b/www/templates/destacado.html
@@ -24,7 +24,7 @@
           <div class="evpre pegado" ng-hide="evento.precio.value">Información no disponible</div>
         <h3 class="liso">Dirección: </h3>
           <div class="evpre pegado" ng-show="evento.lugar.value">{{evento.lugar.value}} <br> {{evento.direccion.value}}</div>
-          <div class="evpre pegado" ng-show="evento.direccion.value"></div>
+          <div class="evpre pegado" ng-show="evento.phone.value">{{evento.phone.value}}</div>
           <p ng-hide="evento.lugar.value">Información no disponible</p>
       </div>
 
