pone el título del evento en todas las vistas detalle

--- a/www/templates/destacado.html
+++ b/www/templates/destacado.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Evento Destacado">
+<ion-view view-title="{{evento.title.value}}">
   <ion-content>
     <div class="list card">
 
