Muestra el Lugar en las listas con imagen

--- a/www/templates/destacados.html
+++ b/www/templates/destacados.html
@@ -7,6 +7,7 @@
         <img class="list-thumb" ng-show="evento.image.value === 'http:'" src='https://raw.githubusercontent.com/jrub/LaAgendica/master/resources/icon.png'/>
 
         <h2>{{evento.title.value}}</h2>
+        <h3 class="evpre" ng-show="evento.lugar">{{evento.lugar.value}}</h3>
         <p>Del {{evento.startDate.value | date:'dd-MMM-yy'}} al {{evento.endDate.value | date:'dd-MMM-yy'}}</p>
       </ion-item>
     </ion-list>
